--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: greenyellow;
+  background-image: url(Assets/glitter-sweet-color.jpg)
 }
 
 .wrapper {
